--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 			<section class="search"></section>
 			<section class="results"></section>
 			<section class="deck"></section>
+			<section class="ui-overlay">
+				<div class="deck__peeker">
+					<div class="deck__peeker-item droppable" data-drop-target="main">MAIN</div>
+					<div class="deck__peeker-item droppable" data-drop-target="side">SIDE</div>
+					<div class="deck__peeker-item droppable" data-drop-target="remove">REMOVE</div>
+				</div>
+			</section>
 			<footer class="foot"></footer>
 		</main>
 	</div>
