Build deck saving and loading logic

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			<footer class="foot"></footer>
 		</main>
 		<div id="hidden-drag-bucket"></div>
+		<div id="modal">Y'all trippin'</div>
 	</div>
 </body>
 </html>
