--- a/index.html
+++ b/index.html
@@ -21,18 +21,7 @@
 			<footer class="foot" style="background: #444">Foot Foot Foot</footer>
 		</main>
 		<div id="hidden-drag-bucket"></div>
-		<div id="modal" data-drop-target="results">
-			<div class="modal-content">
-				<div class="modal__header triptych">
-					<span class="flex-spacer grid-left"></span>
-					<h3 class="modal__header__title grid-center">Modal Header Title</h3>
-					<span class="modal__close grid-right">&times;</span>
-				</div>
-				<div class="modal__content__wrapper">
-					<div class="modal__content"></div>
-				</div>
-			</div>
-		</div>
+		<div id="modal"></div>
 		<div id="inspector"></div>
 		<div class="ui-overlay">
 			<div class="deck__peeker deck__peeker--right">
