Add goldfish arena with very simple zone controls and drag-n-drop

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<div id="hidden-drag-bucket"></div>
 		<div id="modal"></div>
 		<div id="inspector"></div>
+		<div id="game"></div>
 		<div class="ui-overlay">
 			<div class="deck__peeker deck__peeker--right">
 				<div class="deck__peeker-item droppable" data-drop-target="main">MAIN</div>
